load("@buildifier_prebuilt//:rules.bzl", "buildifier")
load("@rules_swiftnav//cc:check_allowed_cc_deps.bzl", "validate_allowed_cc_deps")

buildifier(
    name = "buildifier",
)

# Validation target to check allowed C/C++ dependencies
# Run with: bazel build //:validate_deps
validate_allowed_cc_deps(
    name = "validate_deps",
    targets = [
        "//src/base_math:base_math",
        "//src/fibonacci:fibonacci",
    ],
    tags = ["manual"],
)
