module(name = "small_world")

bazel_dep(name = "platforms", version = "0.0.11")
bazel_dep(name = "rules_swiftnav")
local_path_override(
    module_name = "rules_swiftnav",
    path = "../..",
)

swift_cc_toolchain_ext = use_extension("@rules_swiftnav//cc:extensions.bzl", "swift_cc_toolchain_extension")
use_repo(
    swift_cc_toolchain_ext,
    "aarch64-darwin-llvm20",
    "aarch64-linux-llvm20",
    "aarch64-sysroot",
    "x86_64-darwin-llvm20",
    "x86_64-linux-llvm20",
    "x86_64-sysroot",
)

register_toolchains(
    "@rules_swiftnav//cc/toolchains/llvm20/aarch64-darwin:cc-toolchain-aarch64-darwin",
    "@rules_swiftnav//cc/toolchains/llvm20/x86_64-darwin:cc-toolchain-x86_64-darwin",
    "@rules_swiftnav//cc/toolchains/llvm20/aarch64-linux:cc-toolchain-aarch64-linux",
    "@rules_swiftnav//cc/toolchains/llvm20/x86_64-linux:cc-toolchain-x86_64-linux",
)

bazel_dep(name = "googletest", version = "1.16.0", dev_dependency = True)
bazel_dep(name = "lcov", version = "2.3.1", dev_dependency = True)

# Register the buildifier toolchain
bazel_dep(
    name = "buildifier_prebuilt",
    version = "8.2.0.2",
    dev_dependency = True,
)
