module(name = "small_world")

bazel_dep(name = "platforms", version = "0.0.6")
bazel_dep(name = "rules_swiftnav")
local_path_override(
    module_name = "rules_swiftnav",
    path = "../..",
)

swift_cc_toolchain_ext = use_extension("@rules_swiftnav//cc:extensions.bzl", "swift_cc_toolchain_extension")
use_repo(
    swift_cc_toolchain_ext,
    "aarch64-darwin-llvm",
    "aarch64-linux-llvm",
    "aarch64-sysroot",
    "x86_64-darwin-llvm",
    "x86_64-linux-llvm",
    "x86_64-sysroot",
)

register_toolchains(
    "@rules_swiftnav//cc/toolchains/llvm/aarch64-darwin:cc-toolchain-aarch64-darwin",
    "@rules_swiftnav//cc/toolchains/llvm/x86_64-darwin:cc-toolchain-x86_64-darwin",
    "@rules_swiftnav//cc/toolchains/llvm/aarch64-linux:cc-toolchain-aarch64-linux",
    "@rules_swiftnav//cc/toolchains/llvm/x86_64-linux:cc-toolchain-x86_64-linux",
)

bazel_dep(name = "googletest", version = "1.16.0")
