load("@rules_python//python:py_binary.bzl", "py_binary")
load("@rules_python//python:py_test.bzl", "py_test")
load("@rules_shell//shell:sh_binary.bzl", "sh_binary")
load("@rules_swiftnav//cc:defs.bzl", "UNIT")

py_binary(
    name = "extract_lint_results",
    srcs = ["extract_lint_results.py"],
    main = "extract_lint_results.py",
    tags = ["manual"],
)

py_test(
    name = "extract_lint_results_test",
    srcs = [
        "extract_lint_results.py",
        "extract_lint_results_test.py",
    ],
    main = "extract_lint_results_test.py",
    tags = [UNIT],
    target_compatible_with = select({
        "@platforms//os:linux": ["@platforms//cpu:x86_64"],
        "@platforms//os:macos": ["@platforms//cpu:aarch64"],
        "//conditions:default": ["@platforms//:incompatible"],
    }),
)

sh_binary(
    name = "lint",
    srcs = ["lint.sh"],
    visibility = ["//visibility:public"],
)
