load(":config.bzl", "config")

filegroup(name = "empty")

constraint_value(
    name = "gcc_arm_gnu_8_3_toolchain",
    constraint_setting = "@rules_swiftnav//cc/constraints:toolchain",
    visibility = ["//visibility:public"],
)

filegroup(
    name = "wrappers",
    srcs = glob([
        "wrappers/**",
    ]),
)

filegroup(
    name = "ar_files",
    srcs = [
        ":wrappers",
        "@gcc_arm_gnu_8_3_toolchain//:ar",
    ],
    tags = ["manual"],
)

filegroup(
    name = "as_files",
    srcs = [
        ":wrappers",
        "@gcc_arm_gnu_8_3_toolchain//:as",
    ],
    tags = ["manual"],
)

filegroup(
    name = "compiler_files",
    srcs = [
        ":wrappers",
        "@gcc_arm_gnu_8_3_toolchain//:bin",
        "@gcc_arm_gnu_8_3_toolchain//:include",
    ],
    tags = ["manual"],
)

filegroup(
    name = "linker_files",
    srcs = [
        ":wrappers",
        "@gcc_arm_gnu_8_3_toolchain//:ar",
        "@gcc_arm_gnu_8_3_toolchain//:gcc",
        "@gcc_arm_gnu_8_3_toolchain//:ld",
        "@gcc_arm_gnu_8_3_toolchain//:lib",
    ],
    tags = ["manual"],
)

filegroup(
    name = "objcopy_files",
    srcs = [
        ":wrappers",
        "@gcc_arm_gnu_8_3_toolchain//:objcopy",
    ],
    tags = ["manual"],
)

filegroup(
    name = "strip_files",
    srcs = [
        ":wrappers",
        "@gcc_arm_gnu_8_3_toolchain//:strip",
    ],
    tags = ["manual"],
)

filegroup(
    name = "all_files",
    srcs = [
        ":compiler_files",
        ":linker_files",
        "@gcc_arm_gnu_8_3_toolchain//:bin",
    ],
    tags = ["manual"],
)

config(
    name = "config",
    sysroot = select({
        "@rules_swiftnav//cc:_enable_bzlmod": "external/rules_swiftnav++swift_cc_toolchain_extension+gcc_arm_gnu_8_3_toolchain/aarch64-linux-gnu/libc",
        "//conditions:default": "external/gcc_arm_gnu_8_3_toolchain/aarch64-linux-gnu/libc",
    }),
)

cc_toolchain(
    name = "cc_toolchain",
    all_files = ":all_files",
    ar_files = ":ar_files",
    as_files = ":as_files",
    compiler_files = ":compiler_files",
    dwp_files = ":empty",
    linker_files = ":linker_files",
    objcopy_files = ":objcopy_files",
    strip_files = ":strip_files",
    supports_param_files = 0,
    tags = ["manual"],
    toolchain_config = ":config",
    toolchain_identifier = "gcc-arm-gnu",
)

toolchain(
    name = "toolchain",
    exec_compatible_with = [
        "@platforms//cpu:x86_64",
        "@platforms//os:linux",
    ],
    target_compatible_with = [
        "@platforms//os:linux",
        "@platforms//cpu:aarch64",
        "@rules_swiftnav//cc/toolchains/gcc_arm_gnu_8_3:gcc_arm_gnu_8_3_toolchain",
    ],
    toolchain = ":cc_toolchain",
    toolchain_type = "@bazel_tools//tools/cpp:toolchain_type",
    visibility = ["//visibility:public"],
)
