# Copyright (C) 2024 Swift Navigation Inc.
# Contact: Swift Navigation <dev@swift-nav.com>
#
# This source is subject to the license found in the file 'LICENSE' which must
# be be distributed together with this source. All other rights reserved.
#
# THIS CODE AND INFORMATION IS PROVIDED "AS IS" WITHOUT WARRANTY OF ANY KIND,
# EITHER EXPRESSED OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE IMPLIED
# WARRANTIES OF MERCHANTABILITY AND/OR FITNESS FOR A PARTICULAR PURPOSE.

package(default_visibility = ["//visibility:public"])

load("//cc/toolchains/llvm:cc_toolchain_config.bzl", "cc_toolchain_config")

constraint_value(
    name = "llvm_mingw_toolchain",
    constraint_setting = "@rules_swiftnav//cc/constraints:toolchain",
    visibility = ["//visibility:public"],
)

filegroup(
    name = "wrappers",
    srcs = glob([
        "wrappers/**",
    ]),
    visibility = ["//visibility:public"],
)

filegroup(
    name = "ar_files",
    srcs = [
        ":wrappers",
        "@llvm_mingw_toolchain//:ar",
        "@llvm_mingw_toolchain//:include",
    ],
)

filegroup(
    name = "as_files",
    srcs = [
        ":wrappers",
        "@llvm_mingw_toolchain//:as",
        "@llvm_mingw_toolchain//:include",
    ],
)

filegroup(
    name = "compiler_files",
    srcs = [
        ":wrappers",
        "@llvm_mingw_toolchain//:bin",
        "@llvm_mingw_toolchain//:include",
    ],
)

filegroup(
    name = "dwp_files",
    srcs = [
        ":wrappers",
        "@llvm_mingw_toolchain//:dwp",
    ],
)

filegroup(
    name = "linker_files",
    srcs = [
        ":wrappers",
        "@llvm_mingw_toolchain//:ar",
        "@llvm_mingw_toolchain//:clang",
        "@llvm_mingw_toolchain//:include",
        "@llvm_mingw_toolchain//:ld",
        "@llvm_mingw_toolchain//:lib",
    ],
)

filegroup(
    name = "objcopy_files",
    srcs = [
        ":wrappers",
        "@llvm_mingw_toolchain//:objcopy",
    ],
)

filegroup(
    name = "strip_files",
    srcs = [
        ":wrappers",
        "@llvm_mingw_toolchain//:strip",
    ],
)

filegroup(
    name = "all_files",
    srcs = [
        ":compiler_files",
        ":linker_files",
        "@llvm_mingw_toolchain//:bin",
    ],
)

cc_toolchain_config(
    name = "mingw_toolchain_config",
    abi_libc_version = "mingw",
    abi_version = "clang",
    compiler = "clang",
    cxx_builtin_include_directories = [
        "@llvm_mingw_toolchain//:include",
    ],
    host_system_name = "x86_64-linux-gnu",
    target_cpu = "x86_64",
    target_libc = "glibc_unknown",
    target_system_name = "x86_64-windows",
    tool_paths = {
        "ar": "wrappers/llvm-ar",
        "cpp": "wrappers/clang-cpp",
        "gcc": "wrappers/clang",
        "gcov": "wrappers/llvm-profdata",
        "llvm-cov": "wrappers/llvm-cov",
        "llvm-profdata": "wrappers/llvm-profdata",
        "ld": "wrappers/ld.ldd",
        "nm": "wrappers/llvm-nm",
        "objcopy": "wrappers/llvm-objcopy",
        "objdump": "wrappers/llvm-objdump",
        "strip": "wrappers/llvm-strip",
    },
    toolchain_identifier = "toolchain",
    toolchain_path_prefix = "external/llvm_mingw_toolchain",
)

cc_toolchain(
    name = "cc_toolchain",
    all_files = ":all_files",
    ar_files = ":ar_files",
    as_files = ":as_files",
    compiler_files = ":compiler_files",
    dwp_files = ":empty",
    linker_files = ":linker_files",
    objcopy_files = ":objcopy_files",
    strip_files = ":strip_files",
    toolchain_config = ":mingw_toolchain_config",
)

toolchain(
    name = "mingw_toolchain",
    exec_compatible_with = [
        "@platforms//cpu:x86_64",
        "@platforms//os:linux",
    ],
    target_compatible_with = [
        "@platforms//cpu:x86_64",
        "@platforms//os:windows",
    ],
    target_settings = None,
    toolchain = ":cc_toolchain",
    toolchain_type = "@bazel_tools//tools/cpp:toolchain_type",
)
